--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+  <!----------->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
   <!--
